Prevent horizontal scroll on modals

--- a/static/style.css
+++ b/static/style.css
@@ -254,6 +254,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  overflow-x: hidden;
 }
 
 .modal-close-button {
